--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
             "org.seleniumhq.selenium:selenium-java:4.8.3",
             "org.aeonbits.owner:owner:1.0.12",
             "com.codeborne:selenide:6.12.3",
-            "org.assertj:assertj-core:3.24.2"
+            "org.assertj:assertj-core:3.24.2",
+            "io.rest-assured:rest-assured:5.3.0"
     )
 }
 compileJava {
