--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.qameta.allure' version '2.11.2'
+    id "io.freefair.lombok" version "6.0.0-m2"
 }
 
 group 'mnta.sck'
@@ -39,6 +40,7 @@ dependencies {
             "io.rest-assured:rest-assured:5.3.0",
             "io.rest-assured:json-schema-validator:5.3.0"
     )
+    testImplementation 'org.projectlombok:lombok:1.18.22'
 }
 compileJava {
     options.encoding = 'UTF-8'
