--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,45 @@
 plugins {
-    id 'java'
-    id 'io.qameta.allure' version '2.11.2'
+    id 'java-library'
+    id 'io.qameta.allure' version '2.10.0'
     id "io.freefair.lombok" version "6.0.0-m2"
 }
 
 group 'mnta.sck'
 version '1.0-SNAPSHOT'
 
+repositories {
+    mavenCentral()
+}
+
+def restAssuredVersion = "5.3.0",
+    allureVersion = "2.19.0",
+    slf4jVersion = "2.0.7"
+
 allure {
     report {
-        version.set("2.19.0")
+        version.set(allureVersion)
     }
     adapter {
-        aspectjWeaver.set true
+        aspectjWeaver.set(true)
         frameworks {
             junit5 {
-                adapterVersion.set("2.19.0")
+                adapterVersion.set(allureVersion)
             }
         }
     }
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testImplementation(
-            "com.codeborne:selenide:6.12.3",
-            "com.github.javafaker:javafaker:1.0.2",
-            "org.junit.jupiter:junit-jupiter:5.9.2",
-            "org.slf4j:slf4j-simple:2.0.6",
-            "io.qameta.allure:allure-selenide:2.21.0",
-            "io.github.bonigarcia:webdrivermanager:5.3.2",
-            "org.seleniumhq.selenium:selenium-java:4.8.3",
-            "org.aeonbits.owner:owner:1.0.12",
-            "com.codeborne:selenide:6.12.3",
+    testImplementation (
+            "io.rest-assured:rest-assured:$restAssuredVersion",
+            "io.rest-assured:json-schema-validator:$restAssuredVersion",
+            "io.qameta.allure:allure-rest-assured:$allureVersion",
             "org.assertj:assertj-core:3.24.2",
-            "io.rest-assured:rest-assured:5.3.0",
-            "io.rest-assured:json-schema-validator:5.3.0"
+            "org.junit.jupiter:junit-jupiter:5.9.2",
+            "org.slf4j:slf4j-simple:$slf4jVersion"
     )
-    testImplementation 'org.projectlombok:lombok:1.18.26'
-}
-compileJava {
-    options.encoding = 'UTF-8'
-}
-compileTestJava {
-    options.encoding = 'UTF-8'
 }
 
-test {
-    useJUnitPlatform()
-}
-test {
-    useJUnitPlatform()
-    systemProperties(System.getProperties())
-}
 tasks.withType(Test) {
     useJUnitPlatform()
 
