--- a/build.gradle
+++ b/build.gradle
@@ -50,3 +50,8 @@ tasks.withType(Test) {
         }
     }
 }
+task remote_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("remote")
+    }
+}
