--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,18 @@
-
 plugins {
     id 'java-library'
     id 'io.qameta.allure' version '2.10.0'
     id "io.freefair.lombok" version "6.0.0-m2"
 }
+
 group 'mnta.sck'
 version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    compileJava {
-        options.encoding = 'UTF-8'
-    }
-    compileTestJava {
-        options.encoding = 'UTF-8'
-    }
-}
-
-compileJava {
-    options.encoding = 'UTF-8'
-}
-
-compileTestJava {
-    options.encoding = 'UTF-8'
 }
 
 def restAssuredVersion = "5.3.0",
-    allureVersion = "2.21.0",
+    allureVersion = "2.19.0",
     slf4jVersion = "2.0.7"
 
 allure {
@@ -44,21 +30,16 @@ allure {
 }
 
 dependencies {
-    testImplementation(
+    testImplementation (
             "io.rest-assured:rest-assured:$restAssuredVersion",
             "io.rest-assured:json-schema-validator:$restAssuredVersion",
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "org.assertj:assertj-core:3.24.2",
             "org.junit.jupiter:junit-jupiter:5.9.2",
-            "org.slf4j:slf4j-simple:$slf4jVersion",
-            'com.codeborne:selenide:6.12.3',
-            'io.qameta.allure:allure-selenide:2.21.0',
-
+            "org.slf4j:slf4j-simple:$slf4jVersion"
     )
 }
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
+
 tasks.withType(Test) {
     useJUnitPlatform()
 
