--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
-\.gradle
-\.idea
-\.build
-1.log
+HELP.md
+build/
+!**/src/main/**
+!**/src/test/**
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### Gradle ###
+.gradle
+
+### Logs ###
 *.log
-*.class
-/build/
